add some titles

--- a/app/article-detail.html
+++ b/app/article-detail.html
@@ -6,7 +6,7 @@
                 返回
             </a>
             <div class="weui-flex__item weui-btn_mini">
-                {{title}}
+                文档详情
             </div>
             <a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_warn"
                style="background-color:#303b49;" [style.visibility]="'hidden'">
