--- a/app/nav.html
+++ b/app/nav.html
@@ -1,4 +1,4 @@
-<div *ngIf="state" class="weui-tab">
+<div *ngIf="state.user" class="weui-tab">
     <div class="weui-navbar">
         <div class="weui-navbar__item weui-flex" style="background-color:rgb(32,43,57);color:white">
             <a (click)="this.location.back();" href="javascript:;" class="weui-btn weui-btn_mini weui-btn_warn"
